<resources>
    <string name="app_name">FieldDBLib</string>
    <string name="speech_app_name">LRL Speech Recognition</string>
    <string name="title_datum_detail">Datum</string>
    <string name="title_datum_list_activity">Recognition Trainer Advanced</string>
    <string name="i_agree">I Agree</string>
    <string name="exit">Exit</string>
    <string name="app_explanation">A free open source application for collecting data in the field.</string>
    <string name="delete">Delete</string>
    <string name="action_take_picture">Take Picture</string>
    <string name="action_record_video">Record Video</string>
    <string name="action_play_media">Play</string>
    <string name="action_record_audio">Record Audio</string>
</resources>