<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <!--
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"/>
    -->
    <item
        android:id="@+id/action_speak"
        android:icon="@drawable/ic_action_mic"
        app:showAsAction="always"
        android:title="@string/action_record_audio"/>
    <item
        android:id="@+id/action_play"
        android:icon="@drawable/ic_action_play"
        app:showAsAction="ifRoom"
        android:title="@string/action_play_media"/>
    <item
        android:id="@+id/action_videos"
        android:icon="@drawable/ic_action_video"
        app:showAsAction="ifRoom"
        android:title="@string/action_record_video"/>
    <item
        android:id="@+id/action_images"
        android:icon="@android:drawable/ic_menu_slideshow"
        app:showAsAction="ifRoom"
        android:title="@string/action_take_picture"/>
    <!--
    <item
        android:id="@+id/action_reminders"
        android:icon="@android:drawable/ic_popup_reminder"
        app:showAsAction="ifRoom"
        android:title="@string/action_reminder"/>
    <item
        android:id="@+id/action_locations"
        android:icon="@android:drawable/ic_menu_mylocation"
        app:showAsAction="ifRoom"
        android:title="@string/action_gps_locations"/>
    <item
        android:id="@+id/action_similar"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        android:title="@string/action_similar"/>
    <item
        android:id="@+id/action_tags"
        android:icon="@android:drawable/ic_input_get"
        app:showAsAction="ifRoom"
        android:title="@string/action_tag"/>
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_comments"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="ifRoom"
        android:title="@string/action_comments"/>
    -->
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_delete"
        app:showAsAction="ifRoom"
        android:title="@string/delete"/>

</menu>
